[package]
name = "kernel"
version = "0.1.0"
authors = ["Andrew Jianzhong Liu <liujzh@shanghaitech.edu.cn>"]
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
built = "0.1"

[dependencies]
rlibc = "*"
volatile = "*"
spin = "*"
multiboot2 = "*"
x86_64 = "*"
bitflags = "*"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[profile.release]
panic = "abort"

[dependencies.bump_allocator]
path = "../../libs/bump_allocator"